--- a/CSS/editarPerfil.scss
+++ b/CSS/editarPerfil.scss
@@ -1,3 +1,7 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
 body {
   background: -webkit-linear-gradient(bottom, #e3bf96, #e0841a);
   background-repeat: no-repeat;
@@ -283,34 +287,41 @@ input:-webkit-autofill{
 #user-submit-btn:hover {
   box-shadow: 0px 1px 18px #a35f11;
 }
-footer{
+footer {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  overflow: hidden;
+.footer {
   background-color: #0c0c0c;
   color: #f5f5f5;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  .logo{
-      display: flex;
-      flex-direction: row;
+  .logo {
+    display: flex;
+    flex-direction: row;
+    height: auto;
+    width: 50px;
+    margin: 5px 20px;
+    img {
+      width: 100%;
       height: auto;
-      width: 50px;
-      margin: 5px 20px;
-      img{
-          width: 100%;
-          height: auto;
-      }
+    }
   }
-  .follow{
-      a{
-          color: #f5f5f5;
-      }
+  .follow {
+    a {
+      color: #f5f5f5;
+    }
   }
-  .derechos{
-      display: flex;
-      flex-direction: row-reverse;
-      flex-wrap: wrap;
-      align-content: flex-end;
-      font-size: 10px;
-      margin-right: 10px;
+  .derechos {
+    display: flex;
+    flex-direction: row-reverse;
+    flex-wrap: wrap;
+    align-content: flex-end;
+    font-size: 10px;
+    margin-right: 10px;
   }
+}
 }
