--- a/CSS/home.scss
+++ b/CSS/home.scss
@@ -1,191 +1,204 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
 body {
-    background: -webkit-linear-gradient(bottom, #e3bf96, #e0841a);
-    background-repeat: no-repeat;
-    width: 100vw;
-    min-height: 100vh;
-    margin: 0px;
-    font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
+  background: -webkit-linear-gradient(bottom, #e3bf96, #e0841a);
+  background-repeat: no-repeat;
+  width: 100%;
+  margin: 0px;
+  font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
 }
 nav {
-    background-color: #0c0c0c;
-    color: #f5f5f5;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: auto;
-    margin: 0px;
-    z-index: 100;
-    position: sticky;
-    top: 0;
-    div.logo {
+  background-color: #0c0c0c;
+  color: #f5f5f5;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: auto;
+  margin: 0px;
+  z-index: 100;
+  position: sticky;
+  top: 0;
+  div.logo {
     height: auto;
     width: 75px;
     margin: 5px 20px;
-    img{
-        width: 100%;
-        height: auto;
+    img {
+      width: 100%;
+      height: auto;
     }
-    }
-    form {
+  }
+  form {
     display: flex;
     position: relative;
     width: 300px;
     border-radius: 7rem;
     flex-direction: row;
     input[type="search"] {
-        width: 100%;
-        height: 40px;
-        background: #f5f5f5;
-        padding: 0 1.6rem;
-        border-radius: 7rem;
-        appearance: none; 
-        position: relative;
+      width: 100%;
+      height: 40px;
+      background: #f5f5f5;
+      padding: 0 1.6rem;
+      border-radius: 7rem;
+      appearance: none;
+      position: relative;
     }
     button {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: absolute;
-        top: 0;
-        right: 0;
-        width: 40px;
-        height: 40px;
-        font-weight: bold;
-        background: #e8a860;
-        border-radius: 50%;
-        border-radius: 7rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 40px;
+      height: 40px;
+      font-weight: bold;
+      background: #e8a860;
+      border-radius: 50%;
+      border-radius: 7rem;
     }
-    }
-    .buttons{
-        display: flex;
-        flex-direction: row;
-        button {
-            border: none;
-            color: white;
-            font-weight: bold;
-            padding: 10px 20px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin: 5px 10px;
-            cursor: pointer;
-            border-radius: 10%;
-        }
-        button:hover{
-            background-color: #f5f5f5;
-            color: #0c0c0c;
-            font-weight: bolder;
-            margin: 3px 8px;
-            padding: 12px 22px;
-        }
-        .login{
-            background-color: #e0841a;
-        }
-        .register{
-            background-color: #e8a860;
-        }
-    }
-}
-
-.welcome{
-    background-image: url("../maquetacion/homebg.webp");
-    background-repeat: no-repeat;
-    background-color: #f5f5f5;
-    background-position: center;
-    height: 300px;
-    .description{
-        backdrop-filter: blur(12px) saturate(100%);
-        -webkit-backdrop-filter: blur(12px) saturate(100%);
-        background-color: rgba(80, 80, 80, 0.8);
-        border: solid #0c0c0c 2px;
-        border-radius: 12px;
-        box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.65);
-        width: 50%;
-        position: absolute;
-        left: 10%;
-        margin-top: 10px;
-        color: #f5f5f5;
-        h2 {
-            font-size: 32px;
-            margin: 10px 20px;
-        }
-        h3 {
-            font-size: 24px;
-            margin: 5px 40px;
-        }
-        p {
-            margin: 10px 40px;
-        }
-    }
-}
-
-.info{
-    border-top: solid #0c0c0c 1px;
-    box-shadow: 1px 2px 8px rgba(0, 0, 0, 2);
-    padding: 50px;
+  }
+  .buttons {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
-    .infoq{
-        backdrop-filter: blur(12px) saturate(100%);
-        -webkit-backdrop-filter: blur(12px) saturate(100%);
-        background: #e0841a;
-        border-radius: 25px;
-        border: 2px solid #0c0c0c;
-        box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.65);
-        width: 45%;
-        left: 60%;
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        h2, h3, p{
-            margin: 5px 10px;
-        }
-        ul{
-            margin: 10px;
-        }
-        .img_c{
-            margin: 20px 0 20px 0;
-            height: 200px;
-            width: 200px;
-            background-color: #f5f5f5;
-            border-radius: 50%;
-            img{
-                height: 100%;
-            }
-        }
+    button {
+      border: none;
+      color: white;
+      font-weight: bold;
+      padding: 10px 20px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      margin: 5px 10px;
+      cursor: pointer;
+      border-radius: 10%;
     }
+    button:hover {
+      background-color: #f5f5f5;
+      color: #0c0c0c;
+      font-weight: bolder;
+      margin: 3px 8px;
+      padding: 12px 22px;
+    }
+    .login {
+      background-color: #e0841a;
+    }
+    .register {
+      background-color: #e8a860;
+    }
+  }
 }
-footer{
+
+.welcome {
+  background-image: url("../maquetacion/homebg.webp");
+  background-repeat: no-repeat;
+  background-color: #f5f5f5;
+  background-position: center;
+  height: 300px;
+  .description {
+    backdrop-filter: blur(12px) saturate(100%);
+    -webkit-backdrop-filter: blur(12px) saturate(100%);
+    background-color: rgba(80, 80, 80, 0.8);
+    border: solid #0c0c0c 2px;
+    border-radius: 12px;
+    box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.65);
+    width: 50%;
+    position: absolute;
+    left: 10%;
+    margin-top: 10px;
+    color: #f5f5f5;
+    h2 {
+      font-size: 32px;
+      margin: 10px 20px;
+    }
+    h3 {
+      font-size: 24px;
+      margin: 5px 40px;
+    }
+    p {
+      margin: 10px 40px;
+    }
+  }
+}
+
+.info {
+  border-top: solid #0c0c0c 1px;
+  box-shadow: 1px 2px 8px rgba(0, 0, 0, 2);
+  padding: 50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin-bottom: 50px;
+  .infoq {
+    backdrop-filter: blur(12px) saturate(100%);
+    -webkit-backdrop-filter: blur(12px) saturate(100%);
+    background: #e0841a;
+    border-radius: 25px;
+    border: 2px solid #0c0c0c;
+    box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.65);
+    width: 45%;
+    left: 60%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    h2,
+    h3,
+    p {
+      margin: 5px 10px;
+    }
+    ul {
+      margin: 10px;
+    }
+    .img_c {
+      margin: 20px 0 20px 0;
+      height: 200px;
+      width: 200px;
+      background-color: #f5f5f5;
+      border-radius: 50%;
+      img {
+        height: 100%;
+      }
+    }
+  }
+}
+footer {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    overflow: hidden;
+  .footer {
     background-color: #0c0c0c;
     color: #f5f5f5;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    .logo{
-        display: flex;
-        flex-direction: row;
+    .logo {
+      display: flex;
+      flex-direction: row;
+      height: auto;
+      width: 50px;
+      margin: 5px 20px;
+      img {
+        width: 100%;
         height: auto;
-        width: 50px;
-        margin: 5px 20px;
-        img{
-            width: 100%;
-            height: auto;
-        }
+      }
     }
-    .follow{
-        a{
-            color: #f5f5f5;
-        }
+    .follow {
+      a {
+        color: #f5f5f5;
+      }
     }
-    .derechos{
-        display: flex;
-        flex-direction: row-reverse;
-        flex-wrap: wrap;
-        align-content: flex-end;
-        font-size: 10px;
-        margin-right: 10px;
+    .derechos {
+      display: flex;
+      flex-direction: row-reverse;
+      flex-wrap: wrap;
+      align-content: flex-end;
+      font-size: 10px;
+      margin-right: 10px;
     }
+  }
 }
