--- a/CSS/login.scss
+++ b/CSS/login.scss
@@ -1,3 +1,7 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
 a {
   text-decoration: none;
 }
@@ -6,7 +10,6 @@ body {
   background-repeat: no-repeat;
   font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
   margin: 0;
-  min-height: 100vh;
 }
 label {
   font-size: 11pt;
@@ -133,6 +136,12 @@ input:-webkit-autofill {
   -webkit-text-fill-color: #0c0c0c !important;
 }
 footer {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  overflow: hidden;
+.footer {
   background-color: #0c0c0c;
   color: #f5f5f5;
   display: flex;
@@ -162,4 +171,5 @@ footer {
     font-size: 10px;
     margin-right: 10px;
   }
+}
 }
