--- a/CSS/register.css
+++ b/CSS/register.css
@@ -1,10 +1,14 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
+
 a {
   text-decoration: none;
 }
 
 body {
   background: -webkit-linear-gradient(bottom, #e8a860, #e0841a);
-  min-height: 100vh;
   background-repeat: no-repeat;
   font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
   margin: 0;
@@ -151,27 +155,34 @@ input:-webkit-autofill {
 }
 
 footer {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  overflow: hidden;
+}
+footer .footer {
   background-color: #0c0c0c;
   color: #f5f5f5;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
-footer .logo {
+footer .footer .logo {
   display: flex;
   flex-direction: row;
   height: auto;
   width: 50px;
   margin: 5px 20px;
 }
-footer .logo img {
+footer .footer .logo img {
   width: 100%;
   height: auto;
 }
-footer .follow a {
+footer .footer .follow a {
   color: #f5f5f5;
 }
-footer .derechos {
+footer .footer .derechos {
   display: flex;
   flex-direction: row-reverse;
   flex-wrap: wrap;
