--- a/CSS/login.scss
+++ b/CSS/login.scss
@@ -10,6 +10,11 @@ body {
   background-repeat: no-repeat;
   font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
   margin: 0;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 label {
   font-size: 11pt;
@@ -26,8 +31,8 @@ label {
   border-radius: 8px;
   box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.65);
   height: 500px;
-  margin: 2rem auto 6rem auto;
-  width: 329px;
+  width: 350px;
+  margin-bottom: 50px;
 }
 #card-content {
   padding: 12px 44px;
@@ -136,40 +141,40 @@ input:-webkit-autofill {
   -webkit-text-fill-color: #0c0c0c !important;
 }
 footer {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  overflow: hidden;
-.footer {
-  background-color: #0c0c0c;
-  color: #f5f5f5;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  .logo {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    overflow: hidden;
+  .footer {
+    background-color: #0c0c0c;
+    color: #f5f5f5;
     display: flex;
     flex-direction: row;
-    height: auto;
-    width: 50px;
-    margin: 5px 20px;
-    img {
-      width: 100%;
+    justify-content: space-between;
+    .logo {
+      display: flex;
+      flex-direction: row;
       height: auto;
+      width: 50px;
+      margin: 5px 20px;
+      img {
+        width: 100%;
+        height: auto;
+      }
+    }
+    .follow {
+      a {
+        color: #f5f5f5;
+      }
+    }
+    .derechos {
+      display: flex;
+      flex-direction: row-reverse;
+      flex-wrap: wrap;
+      align-content: flex-end;
+      font-size: 10px;
+      margin-right: 10px;
     }
   }
-  .follow {
-    a {
-      color: #f5f5f5;
-    }
-  }
-  .derechos {
-    display: flex;
-    flex-direction: row-reverse;
-    flex-wrap: wrap;
-    align-content: flex-end;
-    font-size: 10px;
-    margin-right: 10px;
-  }
-}
 }
