--- a/CSS/perfil.scss
+++ b/CSS/perfil.scss
@@ -107,11 +107,12 @@ body {
     align-items: center;
 
     div.img_logo {
+      background-image: url(../maquetacion/Perfil.png);
+      background-size: contain;
       height: 50px;
       min-width: 50px;
       margin: 5px;
       border-radius: 50%;
-      background-color: #e8a860;
     }
     div.usuario {
       font-size: 18px;
@@ -164,14 +165,13 @@ body {
   background-color: #505050;
   color: #f5f5f5;
   .foto {
-    background-color: #e8a860;
+    background-image: url(../maquetacion/Perfil.png);
+    background-size: contain;
+    background-repeat: no-repeat;
     height: 150px;
-    min-width: 100px;
+    min-width: 150px;
     margin-top: 10px;
-    #foto-perfil{
-      height: 150px;
-      border-radius: 50%;
-    }
+    border-radius: 50%;
   }
   .redes{
     width: 100px;
@@ -372,7 +372,6 @@ body {
   }
 
   .container {
-    width: 100%;
     padding-left: 120px;
     padding-right: 30px;
   }
@@ -411,35 +410,41 @@ body {
     border-radius: 500px 0 0 500px;
   }
 }
-footer{
-  margin-top: 20px;
+footer {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  overflow: hidden;
+.footer {
   background-color: #0c0c0c;
   color: #f5f5f5;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  .logo{
-      display: flex;
-      flex-direction: row;
+  .logo {
+    display: flex;
+    flex-direction: row;
+    height: auto;
+    width: 50px;
+    margin: 5px 20px;
+    img {
+      width: 100%;
       height: auto;
-      width: 50px;
-      margin: 5px 20px;
-      img{
-          width: 100%;
-          height: auto;
-      }
+    }
   }
-  .follow{
-      a{
-          color: #f5f5f5;
-      }
+  .follow {
+    a {
+      color: #f5f5f5;
+    }
   }
-  .derechos{
-      display: flex;
-      flex-direction: row-reverse;
-      flex-wrap: wrap;
-      align-content: flex-end;
-      font-size: 10px;
-      margin-right: 10px;
+  .derechos {
+    display: flex;
+    flex-direction: row-reverse;
+    flex-wrap: wrap;
+    align-content: flex-end;
+    font-size: 10px;
+    margin-right: 10px;
   }
+}
 }
