--- a/CSS/register.css
+++ b/CSS/register.css
@@ -12,6 +12,11 @@ body {
   background-repeat: no-repeat;
   font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
   margin: 0;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 label {
@@ -31,8 +36,8 @@ label {
   border-radius: 8px;
   box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.65);
   height: 600px;
-  margin: 2rem auto 4rem auto;
-  width: 329px;
+  width: 350px;
+  margin-bottom: 50px;
 }
 
 #card-content {
