--- a/CSS/perfil.scss
+++ b/CSS/perfil.scss
@@ -195,6 +195,15 @@ body {
     color: #e0841a;
   }
 }
+.descPerfil{
+  color: #f5f5f5;
+  background-color: #505050;
+  padding: 20px 20% 20px 20%;
+  text-align: justify;
+  p{
+    margin: 0;
+  }
+}
 .triangulo {
   width: 0;
   height: 0;
