--- a/CSS/perfil.css
+++ b/CSS/perfil.css
@@ -388,11 +388,13 @@ body {
   font-size: 24px;
   font-weight: bold;
   color: #e8a860;
+  overflow: auto;
 }
 
 .container .content h3 {
   font-size: 18px;
   color: #f5f5f5;
+  overflow: auto;
 }
 
 .container .content p {
@@ -400,6 +402,7 @@ body {
   font-size: 16px;
   line-height: 22px;
   color: #f5f5f5;
+  overflow: auto;
 }
 
 #timeline_c .container::before {
