--- a/CSS/home.css
+++ b/CSS/home.css
@@ -111,11 +111,12 @@ nav .buttons .register {
   border: solid #0c0c0c 2px;
   border-radius: 12px;
   box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.65);
-  width: 50%;
+  width: 60%;
   position: absolute;
   left: 10%;
   margin-top: 10px;
   color: #f5f5f5;
+  padding: 10px 0 20px 0;
 }
 .welcome .description h2 {
   font-size: 32px;
@@ -125,7 +126,7 @@ nav .buttons .register {
   font-size: 24px;
   margin: 5px 40px;
 }
-.welcome .description p {
+.welcome .description li {
   margin: 10px 40px;
 }
 
@@ -150,6 +151,7 @@ nav .buttons .register {
   display: flex;
   align-items: center;
   flex-direction: column;
+  padding: 10px 0 20px 0;
 }
 .info .infoq h2,
 .info .infoq h3,
