--- a/CSS/home.scss
+++ b/CSS/home.scss
@@ -105,11 +105,12 @@ nav {
     border: solid #0c0c0c 2px;
     border-radius: 12px;
     box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.65);
-    width: 50%;
+    width: 60%;
     position: absolute;
     left: 10%;
     margin-top: 10px;
     color: #f5f5f5;
+    padding: 10px 0 20px 0;
     h2 {
       font-size: 32px;
       margin: 10px 20px;
@@ -118,7 +119,7 @@ nav {
       font-size: 24px;
       margin: 5px 40px;
     }
-    p {
+    li {
       margin: 10px 40px;
     }
   }
@@ -144,6 +145,7 @@ nav {
     display: flex;
     align-items: center;
     flex-direction: column;
+    padding: 10px 0 20px 0;
     h2,
     h3,
     p {
