--- a/CSS/login.scss
+++ b/CSS/login.scss
@@ -32,7 +32,7 @@ label {
   box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.65);
   height: 500px;
   width: 350px;
-  margin-bottom: 50px;
+  margin: 20px 0 100px 0;
 }
 #card-content {
   padding: 12px 44px;
