--- a/CSS/perfil.scss
+++ b/CSS/perfil.scss
@@ -237,7 +237,7 @@ body {
   position: relative;
   width: 100%;
   max-width: 1140px;
-  margin: 0 auto;
+  margin-bottom: 100px;
   padding: 15px 0;
 }
 #timeline_f::after {
@@ -347,12 +347,10 @@ body {
   font-size: 24px;
   font-weight: bold;
   color: #e8a860;
-  overflow: auto;
 }
 .container .content h3 {
   font-size: 18px;
   color: #f5f5f5;
-  overflow: auto;
 }
 .container .content p {
   margin: 0;
@@ -423,7 +421,7 @@ body {
   }
 }
 footer {
-  position: absolute;
+  position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
