añadiendo style a las barras laterales

--- a/CSS/perfil.scss
+++ b/CSS/perfil.scss
@@ -443,6 +443,7 @@ footer {
   bottom: 0;
   width: 100%;
   overflow: hidden;
+  z-index: 100;
   .footer {
     background-color: #0c0c0c;
     color: #f5f5f5;
